--- a/application.properties
+++ b/application.properties
@@ -4,6 +4,6 @@ spring.h2.console.enabled=true
 spring.cloud.discovery.enabled=true
 spring.cloud.config.enabled=true
 eureka.instance.prefer-ip-address=true
-spring.cloud.config.server.git.uri=file:///D:/TP2024/devops/bank-account/config-repo
+spring.cloud.config.server.git.uri=https://github.com/hichemtabarki/tp2024-devops-config-repo
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 management.endpoints.web.exposure.include=*
