--- a/application.properties
+++ b/application.properties
@@ -5,5 +5,5 @@ spring.cloud.discovery.enabled=true
 spring.cloud.config.enabled=true
 eureka.instance.prefer-ip-address=true
 spring.cloud.config.server.git.uri=https://github.com/hichemtabarki/tp2024-devops-config-repo
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka}
 management.endpoints.web.exposure.include=*
