--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,8 @@
-global.params.p1=729
-global.params.p2=5296
+global.params.p1=333
+global.params.p2=3333
 spring.h2.console.enabled=true
 spring.cloud.discovery.enabled=true
 spring.cloud.config.enabled=true
 eureka.instance.prefer-ip-address=true
-#spring.cloud.config.server.git.uri=https://github.com/hichemtabarki/tp2024-devops-config-repo
-eureka.client.serviceUrl.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka}
+eureka.client.service-url.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka}
 management.endpoints.web.exposure.include=*
